Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-9223

[Python] Fix to_pandas() export for timestamps within structs

    XMLWordPrintableJSON

Details

    Description

      Currently timestamps within structs unilaterally have their timezone discarded for backwards compatibility reasons.  There is a TODO in the code to come up with a better solution.  This Jira tracks the solution.

      Attachments

        Activity

          People

            emkornfield@gmail.com Micah Kornfield
            emkornfield@gmail.com Micah Kornfield
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0h
                0h
                Logged:
                Time Spent - 11h 20m
                11h 20m